--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -100,3 +100,16 @@ body {
     box-shadow: 0.2em -0.2em 0 0 currentcolor;
   }
 }
+
+.backdrop {
+  animation: backdrop-animation 0.3s;
+}
+
+@keyframes backdrop-animation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0.6;
+  }
+}
